[package]
name = "module-evm"
version = "0.7.3"
authors = ["Bitgreen Developers"]
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
impl-trait-for-tuples = "0.1"
primitive-types = { version = "0.9.0", default-features = false, features = ["rlp", "byteorder"] }
ripemd160 = { version = "0.9", default-features = false }
rlp = { version = "0.5", default-features = false }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
sha3 = { version = "0.8", default-features = false }
tiny-keccak = { version = "2.0", features = ["fips202"] }

evm = { version = "0.26.0", default-features = false, features = ["with-codec"] }
evm-gasometer = { version = "0.26.0", default-features = false }
evm-runtime = { version = "0.26.0", default-features = false }

frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.18" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.18" }
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.18" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.18" }

sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.18" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.18" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.18" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.18" }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", default-features = false }

support = { package = "module-support", path = "../support", default-features = false }
primitives = { package = "bitg-primitives", path = "../../primitives", default-features = false }

[dev-dependencies]
env_logger = "0.7"
orml-currencies = { git = "https://github.com/open-web3-stack/open-runtime-module-library", default-features = false }
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-core/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"sp-io/std",
	"sp-std/std",
	"sha3/std",
	"rlp/std",
	"primitive-types/std",
	"evm/std",
	"evm/with-serde",
	"evm-runtime/std",
	"evm-gasometer/std",
	"pallet-timestamp/std",
	"ripemd160/std",
	"primitives/std",
	"orml-traits/std",
	"support/std",
]
with-ethereum-compatibility = []
