[package]
name = "module-support"
version = "0.7.3"
authors = ["Bitgreen Developers"]
edition = "2018"

[dependencies]
impl-trait-for-tuples = "0.2.1"
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.18" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.18" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.18" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.18" }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", default-features = false }
primitives = { package = "bitg-primitives", path = "../../primitives", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-runtime/std",
	"sp-core/std",
	"frame-support/std",
	"sp-std/std",
	"primitives/std",
	"orml-traits/std",
]
