[package]
name = "module-transaction-payment"
version = "0.7.3"
authors = ["Bitgreen Developers"]
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.18" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.18" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.18" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.18" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.18" }
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.18" }
pallet-proxy = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.18" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.18" }
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", default-features = false }
module-currencies = { path = "../../modules/currencies", default-features = false }
primitives = { package = "bitg-primitives", path = "../../primitives", default-features = false }
support = { package = "module-support", path = "../support", default-features = false }
orml-traits ={ git = "https://github.com/open-web3-stack/open-runtime-module-library", default-features = false }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.18" }
smallvec = "1.4.1"

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"sp-io/std",
	"sp-std/std",
	"orml-tokens/std",
	"module-currencies/std",
	"pallet-balances/std",
	"pallet-proxy/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"primitives/std",
	"support/std",
	"orml-traits/std",
]
