[package]
authors = ['BitGreen <https://bitg.org>']
edition = '2021'
homepage = 'https://bitg.org'
license = 'Unlicense'
name = 'pallet-bridge'
description = "The purpose of the bridge is to allow the cross-chain movement of tokens."
repository = 'https://github.com/bitgreen/bitg-node'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19", default-features = false }
primitives = { package = 'bitg-primitives', path = '../../primitives', default-features = false }
sp-runtime ={ git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19", default-features = false }
pallet-assets = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19", default-features = false }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
bs58 = { default-features = false, version = '0.4.0',features=['alloc']}

[dev-dependencies]
serde = { version = "1.0.136" }
sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.19", default-features = false }

[features]
default = ['std']
std = [
    'codec/std',
    'scale-info/std',
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
    'bs58/std',
    'sp-std/std',
    'pallet-assets/std'
]
