[package]
authors = ['BitGreen <https://bitgreen.org>']
edition = '2018'
homepage = 'https://bitgreen.org'
license = 'MIT'
name = 'pallet-carbon-credits-pool'
description = "Create pools for CarbonCredits"
repository = 'https://github.com/bitgreen/bitg-node'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26", default-features = false }
bs58 = { default-features = false, version = '0.4.0',features=['alloc']}
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
pallet-assets = { package = 'pallet-assets', path = '../assets', default-features = false }
primitives = { package = 'bitg-primitives', path = '../../primitives', default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26", default-features = false }
pallet-uniques = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26", default-features = false }
pallet-carbon-credits = { package = 'pallet-carbon-credits', path = '../carbon-credits', default-features = false }

# Benchmarking
frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", default-features = false, optional = true, branch = "polkadot-v0.9.26" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26", default-features = false }
pallet-membership = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26", default-features = false }


[dev-dependencies]
serde = { version = "1.0.136" }
sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.26", default-features = false }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-std/std',
    'bs58/std',
    'scale-info/std',
    'pallet-assets/std',
    'pallet-balances/std',
    'sp-runtime/std',
    'pallet-uniques/std',
    'pallet-carbon-credits/std',
    'pallet-membership/std'
]
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
]
