[package]
authors = ['BitGreen <https://bitg.org>']
edition = '2018'
homepage = 'https://bitg.org'
license = 'Unlicense'
name = 'pallet-claim'
description = "Module to transfer balances from the 'bitcoin' chain to the 'substrate' chain"
repository = 'https://github.com/bitgreen/bitg-node'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive','max-encoded-len']
package = 'parity-scale-codec'
version = '2.2.0'


[dependencies]
frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18", default-features = false }
primitive-types =  { default-features = false, version = '0.7.3'}
rand =  { default-features = false, version = '0.7.3'}
hex = { default-features = false, version = '0.4'}
sha2 = { default-features = false, version = '0.9.5'}
libsecp256k1 = { default-features = false, version = '0.3.5'}
base64 = {version= "0.13.0", default-features=false,features=['alloc']}
ripemd160 = { default-features = false, version = '0.9.1'}
bs58 = { default-features = false, version = '0.4.0',features=['alloc']}



[dev-dependencies]
serde = { version = "1.0.119" }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.18", default-features = false }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-std/std',
    'sp-runtime/std',
    'sp-io/std',
    'sp-core/std',
    'hex/std',
    'sha2/std',
    'base64/std',
    'libsecp256k1/std',
    'ripemd160/std',
    'bs58/std',
]
