[package]
authors = ['BitGreen <https://bitg.org>']
edition = '2021'
homepage = 'https://bitg.org'
license = 'MIT'
name = 'pallet-claim'
description = "Module to transfer balances from the 'bitcoin' chain to the 'substrate' chain"
repository = 'https://github.com/bitgreen/bitg-node'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.23", default-features = false }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
sha2 = { default-features = false, version = '0.9.5'}
libsecp256k1 = { default-features = false, version = '0.3.5'}
base64 = {version= "0.13.0", default-features=false,features=['alloc']}
ripemd160 = { default-features = false, version = '0.9.1'}
bs58 = { default-features = false, version = '0.4.0',features=['alloc']}

[features]
default = ['std']
std = [
    'codec/std',
    'scale-info/std',
    'frame-support/std',
    'frame-system/std',
    'sp-std/std',
    'sp-runtime/std',
    'sp-io/std',
    'sp-core/std',
    'sha2/std',
    'base64/std',
    'libsecp256k1/std',
    'ripemd160/std',
    'bs58/std',
]
