[package]
authors = ["Bitgreen"]
description = "Bitgreen DEX pallet"
edition = "2021"
license = "Unlicense"
name = "pallet-dex"
readme = "README.md"
version = "0.0.1"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }
log = { version = "0.4.17", default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
frame-benchmarking = { default-features = false, optional = true,  git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0"  }
frame-support = { default-features = false,  git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
frame-system = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
sp-std = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", default-features = false, branch = "polkadot-v1.1.0" }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", default-features = false, branch = "polkadot-v1.1.0" }
pallet-carbon-credits = { package = 'pallet-carbon-credits', path = '../carbon-credits', default-features = false }

# Local dependencies
pallet-assets = { package = 'pallet-assets', path = '../assets', default-features = false }
primitives = { package = 'bitgreen-primitives', path = '../../primitives', default-features = false }

[dev-dependencies]
sp-core = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
sp-io = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-assets/std",
	"scale-info/std",
	"sp-std/std",
	"pallet-balances/std",
	"primitives/std",
	"orml-tokens/std",
	"pallet-carbon-credits/std",
	"log/std"
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
